--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.6.2"
+    "electron": "~1.6.2",
+    "esri-leaflet": "^1.0.0-rc.7",
+    "leaflet": "^0.7.3"
   }
 }
