--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "electron": "~1.6.2",
     "esri-leaflet": "^1.0.0-rc.7",
     "leaflet": "^0.7.3"
+  },
+  "dependencies": {
+    "node-pre-gyp": "^0.6.34"
   }
 }
