--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "leaflet": "^0.7.3"
   },
   "dependencies": {
-    "node-pre-gyp": "^0.6.34"
+    "gps": "^0.2.0",
+    "node-pre-gyp": "^0.6.34",
+    "serialport": "^4.0.7"
   }
 }
