--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "~1.6.2",
+    "electron-rebuild": "^1.5.7",
     "esri-leaflet": "^1.0.0-rc.7",
     "leaflet": "^0.7.3"
   },
